# dbos_experiments

./: .gitignore  README.md  data.db  datasource.yml  dbos-config.yaml  docker-compose.yaml  envrc-template  exp1.py  integration.bak.py  integration.py  main.py  main_profile.prof  my_logger.py  otel-collector-config.yaml  prometheus.yaml  pyproject.toml  pytest.ini  skills-lock.json
.github/instructions/: dbos.instructions.md
data/: data.json.20
exp/: models.py
exp1/: README.md  dbos-config.yaml  main.py  models.py
exp10/: README.md  exp1.py
exp11/: ex1.py
exp12/: ex1.py  test_ex1.py
exp13/: README.md  data.db  data.py  db.py  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py
exp14/: README.md  ex1.py
exp15/: README.md  ex1.py
exp16/: README.md  main.py
exp17/: ARCHITECTURE.md  README.md  TEST_RESULTS.md  client.py  data.py  db.py  elt.py  ex1.py  server.py  test_elt_pipeline.sqlite  test_pipeline.py  test_workflow.py  test_workflow_data.db  test_workflow_data_olap.db
exp18/: README.md  ex1.py  rate_limiter.py  test_rate_limit_simple.py  test_rate_limiter.py  test_threading.py
exp19/: README.md  ex1.py
exp2/: README.md  dbos-config.yaml  integration.py  models.py
exp2/data/: data.json.200
exp20/: README.md  main.py
exp21/: README.md  main.py  main2.py  main3.py  main4.py
exp22/: README.md  main.py
exp23/: PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  VISUAL_GUIDE.md  client_examples.py  commands.sh  commands_events.sh  commands_messaging.sh  commands_streaming.sh  example_client_lib.py  server.py  test_communication.py
exp24/: README.md  main.py
exp25/: README.md  docker-compose.yaml  main.py
exp3/: README.md  dbos-config.yaml  integration.py  models.py
exp3/data/: data.json.1000
exp4/: .envrc  README.md  main.py  models.py
exp4/migrations/: alembic.ini
exp4/templates/: index.html
exp5/: .gitignore  README.md  dbos-config.yaml  main.py  models.py  requirements.txt
exp5/migrations/: env.py
exp5/templates/: index.html
exp6/: .envrc  Dockerfile  README.md  dbos-config.yaml  fastapi_scope.py  fastapi_scope_cache.py  fastapi_scope_shutdown.py  integration.py  nested_wfs.py  scope.py  scope_funcs.py
exp7/: README.md  dbos-config.yaml  resume.py
exp7/migrations/: env.py
exp8/: README.md  exp_multip.py  hybrid_dbos_multiprocessing.py  main.py
exp9/: README.md  client.py  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  server.py  server2.py  server3.py
sql/: m0001.sql
(+3 files in other folders)
