[tool.poetry]
name = "dbos-experiments"
version = "0.1.0"
description = ""
authors = ["Ricardo Leal <ricleal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
dbos = "^1.7.0"
fastapi = "^0.115.7"
pgcli = "^4.1.0"
requests = "^2.32.3"
websockets = "^14.2"
psycopg2-binary = "^2.9.10"
python-json-logger = "^3.2.1"
boto3 = "^1.36.23"
opentelemetry-instrumentation = "^0.51b0"
faker = "^37.4.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
sqlacodegen = "3.0.0rc5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
